--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </tr>
     </table>
     <hr>
-    <h2><a href="Hobbies.html">Hobbies</a></h2>
+    <h2><a href="hobbies.html">Hobbies</a></h2>
 
     <h2><a href="contact.html">Contact Me</a></h2>
 
